--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net461" />
-  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.3.2-ci1036" targetFramework="net461" />
   <package id="Microsoft.Extensions.CommandLineUtils" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net461" />
