--- a/src/MakePdf.Core/packages.config
+++ b/src/MakePdf.Core/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="ReportGenerator" version="3.1.2" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
