--- a/src/MakePdf.Wpf/MakePdf.Wpf.csproj
+++ b/src/MakePdf.Wpf/MakePdf.Wpf.csproj
@@ -138,7 +138,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Bootstrapper.cs" />
-    <Compile Include="Models\Core.cs" />
+    <Compile Include="Models\Model.cs" />
     <Compile Include="Models\Setting.cs" />
     <Compile Include="Models\Updater.cs" />
     <Compile Include="MyInformation.cs" />
