--- a/src/MakePdf.Wpf/NLog.config
+++ b/src/MakePdf.Wpf/NLog.config
@@ -4,18 +4,23 @@
 
   <targets>
     <target
-      name="logfile"
+      name="f"
       xsi:type="File"
       layout="${longdate} [${threadid:padding=8}] [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}"
       fileName="${basedir}/logs/${date:format=yyyyMMdd}.log"
       encoding="UTF-8"
       archiveFileName="${basedir}/logs/archives/archive.{#}.log"
       archiveEvery="Day"
-      archiveNumbering="Rolling"
+      archiveNumbering="Date"
+      archiveDateFormat="yyyyMMdd"
       maxArchiveFiles="7" />
+  <target
+      name="c"
+      xsi:type="Console"
+      layout="${longdate} [${uppercase:${level:padding=-5}}] ${message}" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Debug" writeTo="f,c" />
   </rules>
 </nlog>
