--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
-  <package id="CoreUpdater" version="0.1.0" targetFramework="net461" />
+  <package id="CoreUpdater" version="0.1.0-prerelease" targetFramework="net461" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.2-ci1036" targetFramework="net461" />
