--- a/src/MakePdf.Wpf/MakePdf.Wpf.csproj
+++ b/src/MakePdf.Wpf/MakePdf.Wpf.csproj
@@ -37,6 +37,9 @@
     <Reference Include="CoreUpdater, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\CoreUpdater.0.1.0-prerelease\lib\netstandard2.0\CoreUpdater.dll</HintPath>
     </Reference>
+    <Reference Include="Dragablz, Version=0.0.3.203, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dragablz.0.0.3.203\lib\net45\Dragablz.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
