--- a/src/MakePdf.Core/packages.config
+++ b/src/MakePdf.Core/packages.config
@@ -1,15 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="ReportGenerator" version="3.1.2" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
 </packages>
