--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -1,34 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="2.0.3" targetFramework="net461" />
   <package id="CoreUpdater" version="0.1.0-prerelease" targetFramework="net461" />
   <package id="Dragablz" version="0.0.3.203" targetFramework="net461" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.3.2-ci1036" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
   <package id="Microsoft.Extensions.CommandLineUtils" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.2" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
-  <package id="NLog" version="4.5.0-rc04" targetFramework="net461" />
-  <package id="NLog.Extensions.Logging" version="1.0.0-rtm-rc6" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NLog" version="4.5.6" targetFramework="net461" />
+  <package id="NLog.Extensions.Logging" version="1.1.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net461" />
 </packages>
